Implemented field validations and templatetags in shifts.

--- a/shifts/templates/admin/assign_owner.html
+++ b/shifts/templates/admin/assign_owner.html
@@ -4,7 +4,7 @@
 <form action="" method="post">
 	{% csrf_token %}
 	{{ owner_form }}
-	<p>The following shifts will be (re)assigned:</p>
+	<p>Following shifts will be (re)assigned:</p>
 	<ul>{{ shifts|unordered_list }}</ul>
 
 	<input type="hidden" name="action" value="assign_owner" /> <!--hidden is essential for Django to recognize the form submission as an admin action-->
