--- a/mainpage/templates/mainpage/home.html
+++ b/mainpage/templates/mainpage/home.html
@@ -7,5 +7,6 @@
   <a href="http://127.0.0.1:8000/admin/">Admin</a>
   <a href="http://127.0.0.1:8000/registration/register">Registration</a>
   <a href="http://127.0.0.1:8000/registration/login/">Sign in</a>
+  <a href="http://127.0.0.1:8000/shifts">Shifts</a>
 </body>
 </html>
