--- a/shifts/templates/shifts/index.html
+++ b/shifts/templates/shifts/index.html
@@ -7,15 +7,17 @@
             <div class="fieldWrapper">
                 {{ form.text }}
             </div>
-            <input type="submit" value="Post" class="tiny button">
+            <input type="submit" value="Sell Shift" class="tiny button">
         </form>
     </div>
 </div>
 
-<!-- The feed -->
+hi
+
 <div class="row white">
     <div class="columns large-12">
         <ul>
+            bye
             {% for shift in shifts %}
                 <li>
                     <strong>{{ shift.department }}</strong> -
