--- a/shifts/templates/shifts/base.html
+++ b/shifts/templates/shifts/base.html
@@ -4,7 +4,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Shift Schedule</title>
-		<script src="jquery-1.11.3.min.js"></script>
+		
+		<script type="text/javascript" src="{{ STATIC_URL }} /static/jquery-1.11.3.js">
+		// <script src="jquery-1.11.3.min.js"></script>
 
 		{% block head %}
 		{% endblock %}
