--- a/shifts/templates/shifts/fullcalendar_base.html
+++ b/shifts/templates/shifts/fullcalendar_base.html
@@ -19,7 +19,8 @@
         {% fullcalendar_jquery_ui %}
         {% fullcalendar_javascript %}
         
-        {% calendar_init calendar_config_options %}
+        <!-- {% calendar_init calendar_config_options %} -->
+        {% calendar %}
 
     </head>
     <body>
@@ -32,9 +33,6 @@
         {% block content %}
 
         {% endblock %}
-
-        
-
         
     </body>
 </html>
