--- a/templates/mainpage/home.html
+++ b/templates/mainpage/home.html
@@ -8,5 +8,7 @@
   <a href="http://127.0.0.1:8000/registration/register">Registration</a>
   <a href="http://127.0.0.1:8000/registration/login/">Sign in</a>
   <a href="http://127.0.0.1:8000/shifts">Shifts</a>
+  <a href="http://127.0.0.1:8000/shifts/view_shifts">View Shifts</a>
+  <a href="http://127.0.0.1:8000/shifts/full_calendar">Full Calendar</a>
 </body>
 </html>
