--- a/fullcalendar/templates/fullcalendar/calendar_init.html
+++ b/fullcalendar/templates/fullcalendar/calendar_init.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
-    $(document).ready(function() {
-        // page is now ready, initialize the calendar...
+    $(document).ready(function() { // Page is ready.
+        // Initialize the calendar.
         $('#calendar').fullCalendar({{ calendar_config_options }});
     });
 </script>
