--- a/shifts/templates/shifts/full_calendar.html
+++ b/shifts/templates/shifts/full_calendar.html
@@ -11,8 +11,10 @@
     {% fullcalendar_jquery_ui %}
     {% fullcalendar_javascript %}
 
-    {% calendar_init event_url %}
+    {% calendar_init calendar_config_options %}
 
 </head>
 
+<body>
 {% calendar %}
+</body>
