--- a/templates/mainpage/home.html
+++ b/templates/mainpage/home.html
@@ -1,14 +1,11 @@
+{% extends 'base.html' %}
+
 <!DOCTYPE html>
 <html>
 <head>
   <title>Student Employee Management</title>
 </head>
-<body>
-  <a href="http://127.0.0.1:8000/admin/">Admin</a>
-  <a href="http://127.0.0.1:8000/registration/register">Registration</a>
-  <a href="http://127.0.0.1:8000/registration/login/">Sign in</a>
-  <a href="http://127.0.0.1:8000/shifts">Shifts</a>
-  <a href="http://127.0.0.1:8000/shifts/view_shifts">View Shifts</a>
-  <a href="http://127.0.0.1:8000/shifts/full_calendar">Full Calendar</a>
-</body>
+
+{% block content %}
+{% endblock %}
 </html>
